# LANGUAGE-LEARNING-APP

./: .gitignore  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  dependencies.py  main.py  models.py  seed.py
backend/app/modules/ai_gateway/: public_interface.py  router.py  schemas.py  services.py
backend/app/modules/audit/: public_interface.py  router.py  schemas.py  services.py
backend/app/modules/diagnostics/: public_interface.py  router.py  schemas.py  scoring.py  services.py
backend/app/modules/identity/: public_interface.py  router.py  schemas.py  services.py
backend/app/modules/learner_profile/: public_interface.py  router.py  schemas.py  services.py
backend/app/modules/learning_contract/: public_interface.py  router.py  schemas.py  services.py
backend/app/modules/lesson_engine/: public_interface.py  router.py  schemas.py  services.py
backend/app/modules/linguistic_validation/: public_interface.py  router.py  schemas.py  services.py
backend/app/modules/mastery/: public_interface.py  router.py  schemas.py  services.py
backend/app/shared/: audit.py  state_machine.py
backend/tests/integration/: conftest.py  test_full_integration.py
backend/tests/unit/: test_audit.py  test_diagnostics.py  test_learning_contract.py  test_mastery.py  test_mock_ai.py  test_policy_engine.py  test_scoring_multidimensional.py  test_state_machine.py  test_validation.py
mobile/: app.json  package.json  (+2 more)
(+475 files in other folders)
